# snapmark

./: README.md  pyproject.toml
docs/: parameters.md  pipeline.md  sequences.md  shortcuts.md
examples/: 01_basic_marking.py  04_pipeline_advanced.py
examples/input/: 6200012808_1.dxf  6200012808_3.dxf  F7.dxf
examples/input/nested/: 1412DP_P1_S235JR_SP4_Q1.DXF  BB.dxf
examples/input_customizable/: 563E_SP8_Q1.DXF  564E_SP8_Q1.DXF  575A_SP4_Q1.DXF  575B_SP4_Q1.DXF  P562_SP5_Q1.DXF  P749_SP8_Q1.DXF  S532_P5_SP4_Q2.dxf
snapmark/: __init__.py  core.py  shortcuts.py
snapmark/Sequence/: sequence_system.py
snapmark/Utils/: segments_dict.py
snapmark/builders/: standalone_marking.py
snapmark/checking/: checking.py
snapmark/entities/: add_entities.py  editor.py
snapmark/mark_algorithm/: __init__.py  mark_algorithm.py  placer.py  segment_text_geometry.py  segmenter.py  sequence.py
snapmark/operations/: aligner.py  basic_operations.py  bending.py  counter.py  modify.py  placement.py
snapmark/sequence/: sequence_legacy.py  sequence_system.py
snapmark/utils/: geometry.py  helpers.py  messages.py  segments_dict.py  text_utils.py
tests/integration/: test_add_text.py  test_backup_system.py  test_iteration_manager.py  test_placement.py  test_real_geometry.py
tests/unit/: test_geometry_and_helpers.py  test_mark_algorithm.py  test_operations.py  test_placement_operations.py  test_sequence.py  test_text_builder.py
