[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snapmark"
version = "2.0.7"
description = "Python library for automated DXF file marking and manipulation to engrave your cut files"
readme = "README.md"
authors = [{name = "Federico Sidraschi"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "ezdxf>=1.0.0",
]
keywords = [
    "dxf",
    "autocad",
    "cad",
    "marking",
    "automation",
    "batch-processing",
    "manufacturing",
    "cnc",
    "cam",
    "drawing",
    "ezdxf",
    "design-automation",
    "dxf-files",
    "cad-automation",
    "technical-drawing",
    "mechanical-design",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/serg-you-lin/SnapMark"
Repository = "https://github.com/serg-you-lin/SnapMark"
Documentation = "https://github.com/serg-you-lin/SnapMark#readme"
Issues = "https://github.com/serg-you-lin/SnapMark/issues"

[tool.setuptools.packages.find]
include = ["snapmark*"]
exclude = ["dev*", "examples*", "docs*"]